--- a/sennight-fastapi/requirements.txt
+++ b/sennight-fastapi/requirements.txt
@@ -21,6 +21,8 @@ orjson==3.10.5
 pydantic==2.7.4
 pydantic_core==2.18.4
 Pygments==2.18.0
+PyJWT==2.8.0
+PyMySQL==1.1.1
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
