--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,6 @@ Temporary Items
 ## User settings
 xcuserdata/
 
-## Configuration
-*.xcconfig
-
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
 *.xccheckout
@@ -128,11 +125,13 @@ iOSInjectionProject/
 ### Xcode Patch ###
 *.xcodeproj/*
 !*.xcodeproj/project.pbxproj
+Sennight/Sennight.xcodeproj/xcshareddata/xcschemes/Sennight.xcscheme
 !*.xcodeproj/xcshareddata/
 !*.xcodeproj/project.xcworkspace/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
+
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,xcode,swift
 
