--- a/requirements.txt
+++ b/requirements.txt
@@ -10,17 +10,20 @@ ecdsa==0.19.0
 email_validator==2.2.0
 fastapi==0.111.0
 fastapi-cli==0.0.4
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.4
+jose==1.0.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 mysql-connector-python==8.4.0
 orjson==3.10.5
+packaging==24.1
 pyasn1==0.6.0
 pycparser==2.22
 pydantic==2.7.4
