--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+### Deployment: Azure ###
+secrets/
+*.PublishSettings
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,xcode,swift
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,xcode,swift
 
