--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -63,6 +63,11 @@ jobs:
           tags: gksdbwls/sennight-fastapi:v0.0.3
           file: ./Dockerfile
 
+      - name: Azure CLI Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v1
         with:
