--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -57,11 +57,9 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push container image to Docker Hub
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
-        with:
-          push: true
-          tags: gksdbwls/sennight-fastapi:v0.0.3
-          file: ./Dockerfile
+        run: |
+          docker build --tag gksdbwls/sennight-fastapi:v0.0.3 .
+          docker push gksdbwls/sennight-fastapi:v0.0.3
 
       - name: Azure CLI Login
         uses: azure/login@v1
