--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -41,7 +41,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-          
+
+    steps:
       - name: 'Deploy to Azure Web App'
         run: |
           az webapp update \
