--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -36,7 +36,7 @@ jobs:
           az acr build \
             --resource-group ${{ env.RESOURCE_GROUP }} \
             --registry ${{ env.ACR_NAME }} \
-            --image ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} .
+            --image ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ../..
 
   deploy:
     runs-on: ubuntu-latest
