--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -2,7 +2,7 @@ name: Build Docker image
 
 env:
   IMAGE_NAME: sennight-fastapi
-  IMAGE_TAG: v0.0.3
+  IMAGE_TAG: v0.0.4
   PYTHON_VERSION: '3.12'
 
 on:
@@ -28,6 +28,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
+        with:
+          install: true
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -44,5 +46,6 @@ jobs:
 
       - name: Build and push container image to Docker Hub
         run: |
-          docker build --tag gksdbwls/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} .
-          docker push gksdbwls/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          docker buildx create --use
+          docker buildx build --platform linux/amd64,linux/arm64 \
+            --tag gksdbwls/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} --push .
