--- a/.github/workflows/azure-webapp-from-acr.yml
+++ b/.github/workflows/azure-webapp-from-acr.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Python app to Azure Web App
+name: Build and deploy container to Azure Web App
 
 env:
   AZURE_WEBAPP_NAME: sennight  # set this to the name of your Azure Web App
